--- a/branches/libglade/navit/src/gui/gtk/navit.glade
+++ b/branches/libglade/navit/src/gui/gtk/navit.glade
@@ -42,7 +42,7 @@
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
-	      <signal name="clicked" handler="on_Zoom_in_clicked" object="mainwindow" last_modification_time="Fri, 06 Jan 2006 11:02:00 GMT"/>
+	      <signal name="clicked" handler="on_Zoom_in_clicked" last_modification_time="Fri, 06 Jan 2006 11:02:00 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
